<resources>
    <string name="app_name">ChillieWallet</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_orders">Orders</string>
    <string name="title_settings">Settings</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="address_colon">Address:</string>
    <string name="qr_code">QR Code</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="disconnected">DISCONNECTED</string>
    <string name="connecting">CONNECTING</string>
    <string name="connected">CONNECTED</string>
    <string name="error">ERROR</string>

    <string name="not_detected">NOT DETECTED</string>
    <string name="detected">DETECTED</string>

    <string name="pin">PIN</string>
    <string name="pin_new">New PIN</string>
    <string name="pin_create">Create PIN</string>
    <string name="pin_new_confirm">Confirm PIN</string>
    <string name="pin_enter">Enter your PIN</string>

    <string name="password">Password</string>
    <string name="password_new">New Password</string>
    <string name="password_create">Create Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="password_enter">Enter Password</string>


    <string name="loading">Loading…</string>
    <string name="tap_to_copy">Tap to Copy</string>

    <string name="auth">Authentication</string>
    <string name="auth_note">This will look nicer in Beta</string>
    <string name="title_activity_new_wallet">NewWalletActivity</string>
    <string name="new_wallet">New Wallet</string>
    <string name="new_wallet_create">Create Wallet</string>
    <string name="new_wallet_confirm">Confirm Wallet</string>
    <string name="confirm">Confirm</string>
    <string name="new_wallet_import">Import Wallet</string>
    <string name="new_wallet_import_enter_seed">Enter your seed phrase, separate with single spaces.</string>
    <string name="word_import">Import</string>
    <string name="new_wallet_note">Lets set up another wallet!</string>
    <string name="new_wallet_first_note">Looks like you don\'t have a wallet, Lets set one up!</string>
    <string name="new_wallet_save">Save Wallet</string>
    <string name="new_wallet_confirmation">I have written down all 12 words.\nI will treat them like gold!</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_10">10</string>
    <string name="num_11">11</string>
    <string name="num_12">12</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="welcome_default">Welcome!</string>
    <string name="welcome_back">Welcome Back!</string>


    <string name="welcome_secondary_gain">You Made Money!</string>
    <string name="welcome_secondary_loss">Bad News! =[</string>



    <string name="error_check_network">ERROR:\nDo you have internet?</string>
    <string name="error_password_do_not_match">Passwords Do Not Match.</string>
    <string name="error_password_no_upper">Need Upper-case letter.</string>
    <string name="error_password_no_lower">Need Lower-case letter.</string>
    <string name="error_password_no_special">Need special character.</string>
    <string name="error_password_no_digit">Need number</string>
    <string name="error_password_too_short">Need at least 10 characters.</string>
    <string name="error_pin_do_not_match">PINs did not match. Try again.</string>
    <string name="error_pin_incorrect">Incorrect PIN. Try again.</string>
    <string name="error_seed_word_size">Please enter a 12 word seed-phrase.</string>
    <string name="error_seed_incorrect">Cannot make a wallet from this seed. Please check the input. Separate words with a single space.</string>
    <string name="enter_your_seed_phrase">Enter your seed phrase…Use spaces between words.</string>
    <string name="confirm_your_seed_phrase">Confirm your seed phrase…\nUse spaces between words.</string>

    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>



</resources>