<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.newwallet.NewWalletActivity">

    <TextView
        android:id="@+id/tv_new_wallet_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_wallet"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_new_wallet_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_wallet_note"
        app:layout_constraintTop_toBottomOf="@id/tv_new_wallet_title"
        app:layout_constraintBottom_toTopOf="@id/btn_new_wallet_import"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_new_wallet_import_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_wallet_import_note"
        android:textColor="@color/red"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btn_new_wallet_import"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_new_wallet_import"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/new_wallet_import"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/btn_new_wallet_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_wallet_create"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/btn_new_wallet_import" />

</androidx.constraintlayout.widget.ConstraintLayout>