<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_scanned_qr_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_colon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_scanned_qr_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/tv_scanned_qr_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <ImageView
        android:id="@+id/img_generated_qr_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_scanned_qr_label"
        app:layout_constraintBottom_toTopOf="@id/et_qr_code_generation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/qr_code" />


    <EditText
        android:id="@+id/et_qr_code_generation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:autofillHints="Put something Nice here"
        app:layout_constraintBottom_toTopOf="@id/btn_generate_qr_code"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btn_generate_qr_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/generate_qr_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_scan_qr_code" />

    <Button
        android:id="@+id/btn_scan_qr_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/scan_qr_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_generate_qr_code"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>