<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/welcome_wallet_guide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".2" />


    <TextView
        android:id="@+id/welcome_wallet_intro_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_wallet"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/welcome_wallet_guide" />


    <Button
        android:id="@+id/btn_welcome_wallet_import"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:text="@string/new_wallet_import"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_wallet_intro_title"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/btn_welcome_wallet_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_wallet_create"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@id/btn_welcome_wallet_import" />

</androidx.constraintlayout.widget.ConstraintLayout>