<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:context=".ui.newwallet.NewWalletActivity"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_new_wallet_create_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_wallet_create"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/separate"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_new_wallet_create_title" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5" />

        <TextView
            android:id="@+id/tv_new_wallet_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/num_1"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tv_new_wallet_11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separate" />

        <TextView
            android:id="@+id/tv_new_wallet_1_word"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintEnd_toEndOf="@id/guide_center"
            app:layout_constraintStart_toEndOf="@id/tv_new_wallet_1"
            app:layout_constraintTop_toTopOf="@id/tv_new_wallet_1" />

        <TextView
            android:id="@+id/tv_new_wallet_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/num_2"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tv_new_wallet_10"
            app:layout_constraintStart_toStartOf="@id/guide_center"
            app:layout_constraintTop_toTopOf="@id/tv_new_wallet_1" />

        <TextView
            android:id="@+id/tv_new_wallet_2_word"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_new_wallet_2"
            app:layout_constraintTop_toTopOf="@id/tv_new_wallet_1" />

        <TextView
            android:id="@+id/tv_new_wallet_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/num_3"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tv_new_wallet_11"
            app:layout_constraintStart_toStartOf="@id/tv_new_wallet_1"
            app:layout_constraintTop_toBottomOf="@id/tv_new_wallet_1" />

        <TextView
            android:id="@+id/tv_new_wallet_3_word"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintEnd_toEndOf="@id/guide_center"
            app:layout_constraintStart_toEndOf="@id/tv_new_wallet_3"
            app:layout_constraintTop_toTopOf="@id/tv_new_wallet_3" />

        <TextView
            android:id="@+id/tv_new_wallet_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/num_4"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tv_new_wallet_10"
            app:layout_constraintStart_toStartOf="@id/guide_center"
            app:layout_constraintTop_toTopOf="@id/tv_new_wallet_3" />

        <TextView
            android:id="@+id/tv_new_wallet_4_word"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_new_wallet_4"
            app:layout_constraintTop_toTopOf="@id/tv_new_wallet_3" />

        <TextView
            android:id="@+id/tv_new_wallet_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/num_5"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tv_new_wallet_11"
            app:layout_constraintStart_toStartOf="@id/tv_new_wallet_1"
            app:layout_constraintTop_toBottomOf="@id/tv_new_wallet_3" />

        <TextView
            android:id="@+id/tv_new_wallet_5_word"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintEnd_toEndOf="@id/guide_center"
            app:layout_constraintStart_toEndOf="@id/tv_new_wallet_5"
            app:layout_constraintTop_toTopOf="@id/tv_new_wallet_5" />

        <TextView
            android:id="@+id/tv_new_wallet_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/num_6"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tv_new_wallet_10"
            app:layout_constraintStart_toStartOf="@id/guide_center"
            app:layout_constraintTop_toTopOf="@id/tv_new_wallet_5" />

        <TextView
            android:id="@+id/tv_new_wallet_6_word"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_new_wallet_6"
            app:layout_constraintTop_toTopOf="@id/tv_new_wallet_5" />

        <TextView
            android:id="@+id/tv_new_wallet_7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/num_7"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tv_new_wallet_11"
            app:layout_constraintStart_toStartOf="@id/tv_new_wallet_1"
            app:layout_constraintTop_toBottomOf="@id/tv_new_wallet_5" />

        <TextView
            android:id="@+id/tv_new_wallet_7_word"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintEnd_toEndOf="@id/guide_center"
            app:layout_constraintStart_toEndOf="@id/tv_new_wallet_7"
            app:layout_constraintTop_toTopOf="@id/tv_new_wallet_7" />

        <TextView
            android:id="@+id/tv_new_wallet_8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/num_8"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tv_new_wallet_10"
            app:layout_constraintStart_toStartOf="@id/guide_center"
            app:layout_constraintTop_toTopOf="@id/tv_new_wallet_7" />

        <TextView
            android:id="@+id/tv_new_wallet_8_word"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_new_wallet_8"
            app:layout_constraintTop_toTopOf="@id/tv_new_wallet_7" />

        <TextView
            android:id="@+id/tv_new_wallet_9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/num_9"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tv_new_wallet_11"
            app:layout_constraintStart_toStartOf="@id/tv_new_wallet_11"
            app:layout_constraintTop_toBottomOf="@id/tv_new_wallet_7" />

        <TextView
            android:id="@+id/tv_new_wallet_9_word"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintEnd_toEndOf="@id/guide_center"
            app:layout_constraintStart_toEndOf="@id/tv_new_wallet_9"
            app:layout_constraintTop_toTopOf="@id/tv_new_wallet_9" />

        <TextView
            android:id="@+id/tv_new_wallet_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_10"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guide_center"
            app:layout_constraintTop_toTopOf="@id/tv_new_wallet_9" />

        <TextView
            android:id="@+id/tv_new_wallet_10_word"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_new_wallet_10"
            app:layout_constraintTop_toTopOf="@id/tv_new_wallet_9" />

        <TextView
            android:id="@+id/tv_new_wallet_11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/num_11"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_new_wallet_1"
            app:layout_constraintTop_toBottomOf="@id/tv_new_wallet_9" />

        <TextView
            android:id="@+id/tv_new_wallet_11_word"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintEnd_toEndOf="@id/guide_center"
            app:layout_constraintStart_toEndOf="@id/tv_new_wallet_11"
            app:layout_constraintTop_toTopOf="@id/tv_new_wallet_11" />

        <TextView
            android:id="@+id/tv_new_wallet_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_12"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guide_center"
            app:layout_constraintTop_toTopOf="@id/tv_new_wallet_11" />

        <TextView
            android:id="@+id/tv_new_wallet_12_word"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_new_wallet_12"
            app:layout_constraintTop_toTopOf="@id/tv_new_wallet_11" />

        <TextView
            android:id="@+id/tv_new_wallet_confirmation_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/new_wallet_confirmation_note"
            app:layout_constraintTop_toBottomOf="@id/tv_new_wallet_11" />

        <TextView
            android:id="@+id/tv_new_wallet_confirmation_note_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/new_wallet_confirmation_note_2"
            app:layout_constraintTop_toBottomOf="@id/tv_new_wallet_confirmation_note" />

        <CheckBox
            android:id="@+id/chk_new_wallet_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/new_wallet_confirmation"
            app:layout_constraintTop_toBottomOf="@id/tv_new_wallet_confirmation_note_2" />

        <Button
            android:id="@+id/btn_save_wallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_wallet_save"
            android:enabled="false"
            app:layout_constraintTop_toBottomOf="@id/chk_new_wallet_confirm" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>