<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/welcome_wallet_confirm_title"
        android:visibility="gone"
        tools:visibility="visible"
        android:textColor="@color/red"
        android:gravity="center"
        android:layout_margin="8dp"
        android:textSize="16sp"
        tools:text="ERROR: Must use exactly 12 words" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/welcome_wallet_guide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".2" />

    <TextView
        android:id="@+id/welcome_wallet_confirm_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_wallet_confirm"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/welcome_wallet_guide" />

    <EditText
        android:id="@+id/welcome_wallet_confirm_seed"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:background="?attr/colorSecondary"
        android:gravity="top"
        android:hint="@string/confirm_your_seed_phrase"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@id/btn_confirm_wallet"
        app:layout_constraintTop_toBottomOf="@id/welcome_wallet_confirm_title" />

    <Button
        android:id="@+id/btn_confirm_wallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>